# slef-driving

./: .localization.sh.swp  config.json  localization.sh  localization.sh~
bak/cloud_msgs/msg/: Grid.msg
bak/decision_making/: CMakeLists.txt  package.xml
bak/decision_making/include/: decision_making.h  path.h  polynomials.h
bak/decision_making/launch/: decision.launch
bak/decision_making/src/: decision_making.cpp  polynomials.cpp
bak/grid_msgs/: CMakeLists.txt
bak/grid_msgs/msg/: grid.msg
bak/iau_location/: CMakeLists.txt  package.xml
bak/iau_location/include/: parameters.h  utilityLidar.h
bak/iau_location/launch/: cutrun.launch  test.rviz
bak/iau_location/src/: featureAssociation2.cpp  imageProjection2.cpp  mapOptmization2.cpp  staticMap2.cpp  transformFusion2.cpp  transform_fusion_node.cpp
bak/iau_location/src/bak/: featureAssociation2.cpp  imageProjection2.cpp
bak/iau_location/src/lib/: Estimator.cpp  parameters.cpp
bak/robot_imu/test_imu/: package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/include/cloud_msgs/: Grid.h  PointXYA.h
devel/include/plan_msgs/: Grid.h  HmiControl.h  Path.h  PointSYK.h  PointTraj.h  PointXY.h  RobotState.h  Traj.h
devel/lib/carTop/: carTop  velTop
doc/: proto编译说明.md  robot.pb.cc  robot.pb.h  robot.proto  robot_to_server.pb.cc  robot_to_server.pb.h  robot_to_server.proto
maps/foshan/: GridsCloud.pcd  cornerMap.pcd  surfaceMap.pcd  traj.txt  trajactory.csv  trajectory_wheel.pcd
maps/haida/: GridsCloud.pcd  cornerMap.pcd  delta.txt  surfaceMap.pcd  traj.txt  trajactory.csv
maps/haida1/: GridsCloud.pcd  delta.txt  trajactory.csv  trajectory_wheel.pcd
maps/map_diku/: GridsCloud.pcd  cornerMap.pcd  surfaceMap.pcd  trajactory.csv
maps/siyuan/: GridsCloud.pcd  cornerMap.pcd  traj.txt  trajactory.csv  trajectory_wheel.pcd
src/carTop/: CMakeLists.txt
src/cloud_msgs/: CMakeLists.txt
src/grid_msgs/: package.xml
src/iau_location/: CMakeLists.txt  package.xml
src/runtime_manager/: CMakeLists.txt
(+196 files in other folders)
